	'\n','\r','\t' were not encoded correctly.

2010-01-08  Satoshi Yatagawa  <yata_github@y.hauN.org>

	* twittering-mode.el (twittering-use-show-minibuffer-length): Add
	suggestion into a docstring.

2010-01-08  Yuto Hayamizu  <y.hayamizu@gmail.com>

	* twittering-mode.el (twittering-status-not-blank-p): bug fix:
	always return nil with strings with trailing newline.

2010-01-08  Tadashi MATSUO  <tad@mymail.twin.jp>

	* twittering-mode.el (twittering-image-type): Try to detect image
	type with `image-type-from-data' at first.
	(twittering-retrieve-image): Do not invoke `convert' if Emacs
	supports the image type and resize is not required.

2010-01-08  Yuto Hayamizu  <y.hayamizu@gmail.com>

	* twittering-mode.el (twittering-tmp-dir): delete
	(twittering-icon-mode): don't make temp dir
	(twittering-image-data-table): add. hash table where image data
	are stored.  key:(<url> . <size>),value:(<type> . <binary-data>)
	(twittering-use-wget): delete
	(twittering-image-type): re-implemented. Now it just returns a
	type of a given image.
	(twittering-make-display-spec-for-icon): Now it receives image URL
	as an argument.
	(twittering-retrieve-image): Now it receives image URL as an
	argument.
	(twittering-url-copy-file-async): delete
	(twittering-retrieve-image-without-wget): delete
	(twittering-retrieve-image-with-wget): delete
	(twittering-retrieve-image): changed default image type from png
	to xpm
	(twittering-image-type): bug fix in the case of bitmap
	(twittering-retrieve-image): handle error of determining image
	type.
	(twittering-image-type): let case-fold-search is t.

	* url-emacs21/*: add url library for emacs21

2010-01-07  Yuto Hayamizu  <y.hayamizu@gmail.com>

	* twittering-mode.el (twittering-url-reserved-p): bug fix: some
	reserved characters considered unreserved. Thanks to IMAI
	Toshiyuki
	(twittering-cert-file): add
	(twittering-ensure-ca-cert): generate temporary file for CA certificate

2010-01-06  Satoshi Yatagawa  <yata_github@y.hauN.org>
